<resources>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="cancel">Cancel</string>
    <string name="testing">Testing...</string>
    <string name="initialize">Initializing...</string>
    <string name="app_name">FactoryKit</string>
    <string name="start">Start</string>
    <string name="scan">Scan</string>
    <string name="device_open_fail">Device open fail!</string>
    <string name="service_get_fail">Sevice get fail!</string>
    <string name="sensor_get_fail">Sensor get fail!</string>
    <string name="sensor_register_fail">Sensor register fail!</string>
    <string name="test_pass">Test pass</string>
    <string name="scanning">Scanning...</string>
    <string name="enabling">Enabling...</string>
    <string name="disabling">Disabling...</string>
    <string name="turning_on">Turning on...</string>
    <string name="turning_off">Turning off...</string>
    <string name="off">Off</string>
    <string name="shake_hint">Please cover light sensor with your hands at least 2 times.</string>
    <string name="remove_headset">Please remove headset</string>
    <string name="insert_headset">Please insert headset</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="record">Record</string>
    <string name="time_out">Time out!</string>
    <string name="quit">Press BACK again to quit</string>
    <string name="clean_state">Clean Test State</string>
    <string name="uninstall">Uninstall</string>
    <string name="control_center_quit_confirm">Do you want to exit?</string>
    <string name="led_name">LED</string>
    <string name="led_tri_text">LED test sequence: red, green, blue</string>
    <string name="led_dual_text">LED test sequence: red, green</string>
    <string name="led_confirm">Is LED color correct?</string>
    <string name="version_name">Version</string>
    <string name="device_info_default">unknown</string>
    <string name="firmware_version">Android Version</string>
    <string name="model_number">Model Number</string>
    <string name="baseband_version">Baseband Version</string>
    <string name="kernel_version">Kernel Version</string>
    <string name="build_number">Build Number</string>
    <string name="flashlight_name">Flashlight</string>
    <string name="flashlight_confirm">Is the Flashlight on?</string>
    <string name="keypadbacklight_name">KeypadBacklight</string>
    <string name="keypadbacklight_confirm">Is the KeypadBacklight on?</string>
    <string name="backlight_name">BackLight</string>
    <string name="backlight_test_hint">The backlight will light up after five seconds</string>
    <string name="sim1_name">SIM1</string>
    <string name="sim2_name">SIM2</string>
    <string name="tpinfo_name">TP Info</string>
    <string name="tp_reset_pass">Reset Test: Pass</string>
    <string name="tp_rawdata_pass">Rawdata Test: Pass</string>
    <string name="tp_calibrate_pass">Calibrate Test: Pass</string>
    <string name="tp_reset_unknow">Reset Test: Unknow</string>
    <string name="tp_rawdata_unknow">Rawdata Test: Unknow</string>
    <string name="tp_calibrate_unknow">Calibrate Test: Unknow</string>
    <string name="tp_vendor">TP Version</string>
    <string name="touchpanel_edge_name">TouchPanel Edge</string>
    <string name="touchpanel_key_name">TouchPanel Key</string>
    <string name="keypad_name">Keypad</string>
    <string name="keypad_text">Please press the following keys</string>
    <string name="keypad_volume_up">VOLUME_UP</string>
    <string name="keypad_volume_down">VOLUME_DOWN</string>
    <string name="keypad_focus">FOCUS</string>
    <string name="keypad_camera">CAMERA</string>
    <string name="keypad_power">POWER KEY</string>
    <string name="keypad_hook">HEADSET HOOK</string>
    <string name="keypad_back">BACK KEY</string>
    <string name="keypad_home">HOME KEY</string>
    <string name="keypad_menu">MENU KEY</string>
    <string name="cameraback_name">CameraBack</string>
    <string name="cameraback_takepicture">Take picture</string>
    <string name="cameraback_fail_open">Camera open Fail, please Check Camera Installed Correctly!</string>
    <string name="autofocus_fail">AutoFocus Failed</string>
    <string name="camerafront_name">CameraFront</string>
    <string name="camerafront_takepicture">Take picture</string>
    <string name="lcm_name">LCM</string>
    <string name="lcm_confirm">Please choose</string>
    <string name="vibrate_name">Vibrator</string>
    <string name="vibrate_confirm">Please choose</string>
    <string name="vibrate_hint">Vibrating...</string>
    <string name="psensor_name">Proximity Sensor</string>
    <string name="psensor_title">Please follow the instruction, and every step must be
        done within 7s</string>
    <string name="psensor_to_cover">Cover PSensor more than 1s</string>
    <string name="psensor_to_uncover">Uncover PSensor more than 1s</string>
    <string name="psensor_uncovered">Uncovered</string>
    <string name="psensor_covered">Covered</string>
    <string name="psensor_verifying">Verifying...</string>
    <string name="psensor_sensor_unstable_fail">PSensor unstable!</string>
    <string name="gsensor_name">Gravity Sensor</string>
    <string name="actual_position">Actual position</string>
    <string name="gsensor_notification">Please turn the tablet</string>
    <string name="msensor_name">Magnetic Sensor</string>
    <string name="gyroscope_name">Gyroscope</string>
    <string name="lightsensor_name">LightSensor</string>
    <string name="lsensor_hint">Please cover light sensor with your hands</string>
    <string name="lsensor_adc_value">ADC Value</string>
    <string name="otg_name">OTG</string>
    <string name="otg_in_test2">"Finded OTG! Test Completed!"</string>
    <string name="otg_in_test1">"Can't find OTG,please plug in OTG and retry"</string>
    <string name="otg_retry">Retry again!"</string>
    <string name="otg_help">Help:\n Please plug in OTG and test.\n If you need test again,press retry!</string>
    <string name="hall_name">Hall</string>
    <string name="tvHallNotification">"Please put the magnet near the Pad and observe the screen changes"</string>
    <string name="hall_active">Hall State: Active</string>
    <string name="hall_inactive">Hall State: Inactive</string>
    <string name="compass_name">Compass</string>
    <string name="No_sensor">No sensor</string>
    <string name="Azimuth">Azimuth: </string>
    <string name="Pitch">Pitch: </string>
    <string name="Roll">Roll: </string>
    <string name="Compass_Azimuth">(Azimuth: 0=North 90=East 180=South 270=West)</string>
    <string name="Compass_calibration">Do calibration in the following procedures.</string>
    <string name="sdcard_name">SD Card</string>
    <string name="sdcard_wait">Please wait for reading Sd card...</string>
    <string name="sdcard_confirm">Have inserted SD card?</string>
    <string name="sdcard_to_remove">Please Remove the SD card</string>
    <string name="sdcard_to_insert">Please insert SD card</string>
    <string name="Micro_SD">Micro SD</string>
    <string name="Micro_SD_status">Micro SD status</string>
    <string name="Used">Used: </string>
    <string name="Free">Free: </string>
    <string name="SD_yes">Insert</string>
    <string name="SD_no">Not Insert</string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="bluetooth_scan_start">Scaning devices...</string>
    <string name="bluetooth_scan_finish">Finish scan</string>
    <string name="bluetooth_turning_on">Turning on bluetooth...</string>
    <string name="bluetooth_scan_null">Not found any device</string>
    <string name="wifi_name">WLAN</string>
    <string name="wifi_text">WLAN test will be completed within 30 seconds, please wait.</string>
    <string name="wifi_scan_failed">Scan failed!</string>
    <string name="wifi_is_closing">WLAN is closing, please retry after a while.</string>
    <string name="wifi_scan_null">Not found any AP!</string>
    <string name="wifi_state_unknown">WLAN state unknown, please retry.</string>
    <string name="handset_name">Handset</string>
    <string name="handset_hint">Handset audio loopback testing...</string>
    <string name="handset_loopback">Handset audio loopback testing...</string>
    <string name="handset_playing">Replaying now, please listen to the receiver.</string>
    <string name="handset_confirm">Do you hear the sound?</string>
    <string name="handset_record_first">Please click Record button first</string>
    <string name="handset_replay_end">Have reached the end.</string>
    <string name="handset_to_record">Click Record button to record sound.</string>
    <string name="transmitter_receiver_name">Transmitter and Receiver</string>
    <string name="transmitter_receiver_hint">Transmitter and Receiver</string>
    <string name="transmitter_receiver_recording">Now recording, please say some words to transmitter and click Stop button to stop.</string>
    <string name="transmitter_receiver_playing">Replaying now, please listen to the receiver.</string>
    <string name="transmitter_receiver_confirm">Do you hear the sound?</string>
    <string name="transmitter_receiver_record_first">Please click Record button first</string>
    <string name="transmitter_receiver_replay_end">Have reached the end.</string>
    <string name="transmitter_receiver_to_record">Click Record button to record sound.</string>
    <string name="transmitter_speaker_name">Transmitter and Speaker</string>
    <string name="transmitter_speaker_hint">Transmitter and Speaker</string>
    <string name="handset_recording">Now recording, please say some words to mic and click Stop button to stop.</string>
    <string name="transmitter_speaker_recording">Now recording, please say some words to transmitter and click Stop button to stop.</string>
    <string name="transmitter_speaker_playing">Replaying now, please listen to the speaker.</string>
    <string name="transmitter_speaker_confirm">Do you hear the sound?</string>
    <string name="transmitter_speaker_record_first">Please click Record button first</string>
    <string name="transmitter_speaker_replay_end">Have reached the end.</string>
    <string name="transmitter_speaker_to_record">Click Record button to record sound.</string>
    <string name="headset_name">Headset</string>
    <string name="headset_hint">Headset</string>
    <string name="headset_recording">Now recording, please say some words to mic and click Stop button to stop.</string>
    <string name="headset_playing">Replaying now, please listen to the receiver.</string>
    <string name="headset_confirm">Do you hear the sound?</string>
    <string name="headset_record_first">Please click Record button first</string>
    <string name="headset_replay_end">Have reached the end.</string>
    <string name="headset_to_record">Click Record button to record sound.</string>
    <string name="speaker_name">Speaker</string>
    <string name="speaker_hint">Can you hear music playing?</string>
    <string name="speaker_confirm">Do you hear the sound?</string>
    <string name="speaker_playing">Playing...</string>
    <string name="speaker_play_first">Please click Play button first</string>
    <string name="speaker_to_play">Click Play button to play sound.</string>
    <string name="speaker_recording">Now being recorded, please speak</string>
    <string name="gps_name">GPS</string>
    <string name="gps_enable_first">Please enable GPS first</string>
    <string name="gps_start">Start</string>
    <string name="gps_stop">Stop</string>
    <string name="gps_search">Searching...</string>
    <string name="gps_satellite">Satellite</string>
    <string name="gps_prn">PRN</string>
    <string name="gps_snr">SNR</string>
    <string name="gps_longitude">Longitude: </string>
    <string name="gps_latitude">Latitude: </string>
</resources>