<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:text="@string/model_number"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/tv_mod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/device_info_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="20px"
        android:layout_marginTop="10px"
        android:background="#696969" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/firmware_version"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/tv_fir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/device_info_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="20px"
        android:layout_marginTop="10px"
        android:background="#696969" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/baseband_version"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/tv_bas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/device_info_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="20px"
        android:layout_marginTop="10px"
        android:background="#696969" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/kernel_version"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/tv_ker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/device_info_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="20px"
        android:layout_marginTop="10px"
        android:background="#696969" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/build_number"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/tv_bud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:text="@string/device_info_default" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="20px"
        android:layout_marginTop="10px"
        android:background="#696969" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/version_success"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/pass" >
        </Button>

        <Button
            android:id="@+id/version_fail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/fail" >
        </Button>
    </LinearLayout>

</LinearLayout>