<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginTop="20px"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tp_reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/tp_reset_unknow"
            android:textSize="20dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginBottom="20px"
            android:layout_marginTop="10px"
            android:background="#696969" />

        <TextView
            android:id="@+id/tp_rawdata"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/tp_rawdata_unknow"
            android:textSize="20dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="20px"
            android:layout_marginTop="10px"
            android:background="#696969" />

        <TextView
            android:id="@+id/tp_calibrate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/tp_calibrate_unknow"
            android:textSize="20dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="20px"
            android:layout_marginTop="10px"
            android:background="#696969" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/tp_vendor"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/tp_vendor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:textSize="16dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="10px"
            android:background="#696969" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tp_sul"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/pass" >
        </Button>

        <Button
            android:id="@+id/tp_fail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/fail" >
        </Button>
    </LinearLayout>

</LinearLayout>